added slash as subpath

--- a/_config.yml
+++ b/_config.yml
@@ -3,7 +3,7 @@ title: Smart Light Apps
 subtitle:
 email: smartlightsapps@gmail.com
 description: A home to all smart lights
-baseurl: ""# the subpath of your site, e.g. /blog
+baseurl: "/"# the subpath of your site, e.g. /blog
 url: # the base hostname & protocol for your site
 author:
 street_address: 
